syntax = "proto3";
package tendermint.p2p;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/p2p";

import "tendermint/p2p/types.proto";
import "gogoproto/gogo.proto";

message PexRequest {}

message PexResponse {
  repeated NetAddress addresses = 1 [(gogoproto.nullable) = false];
}

message PexMessage {
  oneof sum {
    PexRequest  pex_request  = 1;
    PexResponse pex_response = 2;
  }
}
